--- a/teaJsonArchive.html
+++ b/teaJsonArchive.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>Tea Menu</title>
@@ -11,65 +10,31 @@
     @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap');
 
-    .tea {
-      padding-left: 20px;
-    }
-
-    .teaName {
-      font-size: 20px;
-    }
-
-    .archive {
-      display: block;
-      text-align: right;
-      color: #d5d5d5;
-      font-size: 20px;
-      text-decoration: none;
-      padding: 10px;
-    }
-
-    .description {
-      padding-left: 10px;
-      font-size: 14px;
-    }
-
-    p {
-      display: inline-block
-    }
-
-    h1 {
-      padding-top: 50px;
-    }
-
-    h2 {
-      text-decoration: underline;
-    }
-
+    .tea {padding-left: 20px; }
+    .teaName {font-size: 20px;}
+    .description {padding-left: 10px; font-size: 14px; }
+    p {display: inline-block}
+    h1 {padding-top: 50px;}
+    h2 {text-decoration: underline;}
     * {
       font-family: 'Cormorant Garamond', serif;
 
     }
-
-    h1,
-    h3 {
+    h1, h3 {
       text-align: center;
-      font-family: 'Anton', sans-serif;
-    }
+      font-family: 'Anton', sans-serif;}
   </style>
 </head>
-
 <body>
   <div id="root"></div>
 
   <script type="text/babel">
     const TeaMenu = ({ teas }) => {
-
-
       const orderedTypes = ['White', 'Oolong', 'Ripe', 'Raw', 'Red', 'Other'];
 
-      const filteredTeas = teas.filter(tea => tea.Amount !== undefined && tea.Amount !== 0);
+      const filteredTeas = teas.filter(tea => tea.Amount == undefined || tea.Amount === 0);
 
-      // Group teas by type
+              // Group teas by type
       const groupedTeas = orderedTypes.reduce((groups, type) => {
         const teasOfType = filteredTeas.filter(tea => tea.Type === type);
         if (teasOfType.length) {
@@ -78,7 +43,7 @@
         return groups;
       }, {});
 
-
+    
       return (
         <div>
           {Object.entries(groupedTeas).map(([type, teas]) => (
@@ -92,7 +57,7 @@
                   </p>
                   <p className='description' style={{ margin: '5px 0 10px 0' }}>{tea.Description}
                     {tea.Seller && tea.Link && (
-                      <span style={{ fontSize: '12px' }}> <a href={tea.Link} target="_blank" rel="noopener noreferrer">{tea.Seller}</a>
+                      <span style={{fontSize: '12px'}}> <a href={tea.Link} target="_blank" rel="noopener noreferrer">{tea.Seller}</a>
                       </span>
                     )}
                   </p>
@@ -108,44 +73,17 @@
       const [teaData, setTeaData] = React.useState([]);
 
       React.useEffect(() => {
-        // Fetching data from Google Sheets CSV file
-        const headers = new Headers();
-        headers.append('X-Requested-With', 'XMLHttpRequest');
-        fetch('https://cors-anywhere.herokuapp.com/http://docs.google.com/spreadsheets/d/e/2PACX-1vTiIho0ymnn0HjdPuu1ImqbeGaDc3TTFgkpLSl7EIs5dyymphCBr1aQq3zglABERNgcXg9Zq7m6cT7u/pub?gid=0&single=true&output=tsv', {
-          method: 'GET',
-          headers: headers,
-          mode: 'cors',
-          cache: 'default'
-        })
-          .then(response => response.text())
-          .then(data => {
-            // Process the TSV data
-            const rows = data.split('\n');
-            const headers = rows[0].split('\t'); // Split using '\t' for TSV
-            const teaList = rows.slice(1).map(row => {
-              const values = row.split('\t'); // Split using '\t' for TSV
-              const tea = {};
-              headers.forEach((header, index) => {
-                tea[header] = values[index];
-              });
-              return tea;
-            });
-            console.log(teaList)
-            const teaListFiltered = teaList.filter(tea.Amount == undefined || tea.Amount === 0);
-            console.log(teaListFiltered)
-            setTeaData(teaListFiltered);
-          })
+        // Simulating fetching data from a JSON file
+        fetch('tea.json') // Replace 'tea.json' with the actual path to your JSON file
+          .then(response => response.json())
+          .then(data => setTeaData(data))
           .catch(error => console.error('Error fetching data:', error));
       }, []);
 
-
-
       return (
         <div>
-          <h1>Ballerina's Salon de Thé</h1>
-          <h3>Winter 2023 Menu</h3>
+          <h1>Yesteryear's Teas</h1>
           <TeaMenu teas={teaData} />
-          <a class='archive' href='/teas-archive.html'>archive</a>
         </div>
       );
     };
@@ -153,5 +91,4 @@
     ReactDOM.render(<App />, document.getElementById('root'));
   </script>
 </body>
-
 </html>
