--- a/teas-archive.html
+++ b/teas-archive.html
@@ -13,6 +13,7 @@
 
     .tea {
       padding-left: 20px;
+      margin-bottom: 10px !important;
     }
 
     .teaName {
@@ -30,7 +31,7 @@
 
     .description {
       padding-left: 10px;
-      font-size: 14px;
+      font-size: 17px;
     }
 
     p {
