--- a/tea.html
+++ b/tea.html
@@ -112,7 +112,7 @@
         // Fetching data from Google Sheets CSV file
         const headers = new Headers();
         headers.append('X-Requested-With', 'XMLHttpRequest');
-        fetch('https://teaproxy.jvb.io/', {
+        fetch('https://api.jvb.io/', {
           method: 'GET',
           headers: headers,
           mode: 'cors',
