--- a/tea.html
+++ b/tea.html
@@ -118,10 +118,10 @@
           mode: 'cors',
           cache: 'default'
         })
-          .then(response => response.text())
+          .then(response => response.body.text())
           .then(data => {
             // Process the TSV data
-            const rows = data.body.split('\n');
+            const rows = data.split('\n');
             const headers = rows[0].split('\t'); // Split using '\t' for TSV
             const teaList = rows.slice(1).map(row => {
               const values = row.split('\t'); // Split using '\t' for TSV
