--- a/teas-archive.html
+++ b/teas-archive.html
@@ -112,14 +112,15 @@
         // Fetching data from Google Sheets CSV file
         const headers = new Headers();
         headers.append('X-Requested-With', 'XMLHttpRequest');
-        fetch('https://teaproxy.jvb.io/', {
+        fetch('https://api.jvb.io/', {
           method: 'GET',
           headers: headers,
           mode: 'cors',
           cache: 'default'
         })
-          .then(response => response.text())
-          .then(data => {
+        .then(response => response.json())
+          .then(response => {
+            const data = response.body;
             // Process the TSV data
             const rows = data.split('\n');
             const headers = rows[0].split('\t'); // Split using '\t' for TSV
